--- a/app/components/polaris/dropzone_component.html.erb
+++ b/app/components/polaris/dropzone_component.html.erb
@@ -101,7 +101,7 @@
         <% if @size.in?(%i[small]) %>
           <span class="target"></span>
         <% else %>
-          <%= polaris_stack(vertical: true) do %>
+          <%= polaris_stack(vertical: true, style: "width: 100%;") do %>
             <span class="target"></span>
           <% end %>
         <% end %>
@@ -156,6 +156,12 @@
                 classes: "Polaris--hidden",
                 style: "margin-top: 4px;"
               ) { @upload_error_text } %>
+            <% end %>
+
+            <% stack.with_item do %>
+              <button data-action="click->polaris-dropzone#removeFile" style="cursor:pointer">
+                <%= polaris_icon(name: "XIcon", color: :base) %>
+              </button>
             <% end %>
           <% end %>
         <% end %>
