Add ability to pass in pane arguments from popover_arguments

--- a/app/components/polaris/popover_component.html.erb
+++ b/app/components/polaris/popover_component.html.erb
@@ -20,7 +20,8 @@
             <% else %>
               <%= render Polaris::Popover::PaneComponent.new(
                 sectioned: @sectioned,
-                scrollable_shadow: @scrollable_shadow
+                scrollable_shadow: @scrollable_shadow,
+                **@pane_arguments
               ) do %>
                 <%= content %>
               <% end %>
